# birdthing

./: .gitignore  package-lock.json  package.json  test.ipynb  up.md
birdthing/: package-lock.json  package.json  supabase.sql  svelte.config.js  vite.config.ts
birdthing-api/: pyproject.toml
birdthing-api/birdthing_api/: db.py  main.py
birdthing-api/birdthing_api/controllers/: bird.py
birdthing/src/: app.html
birdthing/src/lib/: BirdDetail.svelte  BirdList.css  BirdList.svelte  BirdName.svelte  BirdPeek.svelte  Checkboxes.svelte  Dialogue.svelte  EditBird.svelte  Loading.svelte  Nav.svelte  SelectBirdName.svelte  bird.ts  supabase.ts
birdthing/src/lib/svelte-family-tree/: FamilyTree.svelte
birdthing/src/routes/: +layout.svelte  +page.svelte
db/: db.sql
db/tables/: bird.sql  clutch.sql  result.sql
old/: package-lock.json
old/src/: hooks.ts
old/src/lib/: db.ts
old/src/lib/components/: Nav.svelte
pocketbase/pb_migrations/: 1706234522_created_bird.js  1706234543_updated_bird.js  1706236006_updated_bird.js  1706391024_updated_bird.js  1706415326_updated_bird.js  1706415347_updated_bird.js  1706416128_updated_bird.js  1706426781_updated_bird.js  1706426822_updated_bird.js  1706426986_updated_bird.js  1706427002_updated_bird.js  1706427163_updated_bird.js  1706427253_created_account_sharing.js  1706427527_updated_bird.js  1706470968_updated_bird.js
src/lib/: db.ts
src/lib/components/: BirdDetail.svelte  BirdList.svelte
src/routes/: $layout.svelte  birds.json.ts  birds.svelte  index.svelte
src/routes/bird/: [slug].svelte
(+3 files in other folders)
