[tool.poetry]
name = "birdthing-api"
version = "0.1.0"
description = ""
authors = ["John LaRocque <jwlarocque@gmail.com>"]
readme = "README.md"
packages = [{include = "birdthing_api"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
